--- a/tomorrow.mdx
+++ b/tomorrow.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'SSR copy'
+title: 'Post for tomorrow'
 date: '2023-07-21'
-tags: ["next js", "SSR Copy", "SSG", "SSR"]
+tags: ["next js", "SSR Copy", "Statice Site Generation", "SSR"]
 ---
 
-We recommend using **Static Generation** (with and without data) whenever possible because your page can be built once and served by CDN, which makes it much faster than having a server render the page on every request.
+We recommendedededd to using **Static Generation** (with and without data) whenever possible because your page can be built once and served by CDN, which makes it much faster than having a server render the page on every request.
 
 You can use Static Generation for many types of pages, including:
 
